6910182: CMS: assert(_cursor[j] == _survivor_plab_array[j].end(),"Ctl pt invariant")

Calculation of the slicing of survivor spaces for MT was incorrect.

Reviewed-by: ysr